[package]
name = "url-shortener"
version = "0.1.0"
edition = "2021"
authors = ["ksnurnicyn@gmail.com"]
description = "Url shortener, based on a simple Redis-like key-value storage server"
repository = "https://github.com/SnurnicynKonstantin/url-shortener"

[[bin]]
name = "url-shortener"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1